<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bdc5c5cc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_bottom_bar_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:text="@string/take_photo"
            android:background="#d6ffffff"
            android:gravity="center_horizontal"
            android:textSize="17sp"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#8f07010d" />

        <TextView
            android:id="@+id/tv_bottom_bar_select_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/select_from_gallery"
            android:paddingHorizontal="20dp"
            android:background="#d6ffffff"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#8f07010d" />

        <TextView
            android:id="@+id/tv_bottom_bar_save_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/save_photo"
            android:background="#d6ffffff"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#8f07010d" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_bottom_bar_cacel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:drawablePadding="15dp"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical|center_horizontal"
                android:background="#d6ffffff"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
