<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/iv_register_portrait"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:background="@drawable/robot_portrait"
        app:layout_constraintEnd_toEndOf="@id/constraintLayout"
        app:layout_constraintStart_toStartOf="@id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:id="@+id/ll_login_tittle_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_register_portrait">

        <LinearLayout
            android:id="@+id/ll_tab_register"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tab_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#c93688f2"
                android:layout_gravity="center"
                android:textSize="20dp" />

            <View
                android:id="@+id/indicate_register"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#c93688f2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab_login"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tab_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#79434951"
                android:layout_gravity="center"
                android:textSize="20dp" />

            <View
                android:id="@+id/indicate_login"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#30434951" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_login_tittle_bar"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/person"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/edit_border"
            android:padding="10dp"
            android:hint="请输入您的用户名" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/edit_border"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="请输入密码" />

        <EditText
            android:id="@+id/et_check_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/edit_border"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="请确认密码" />

        <Button
            android:id="@+id/btn_regist_login_commit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:textColor="#ffffff" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_register_announce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announce"
        app:layout_constraintEnd_toEndOf="@id/constraintLayout"
        app:layout_constraintStart_toStartOf="@id/constraintLayout"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
        android:layout_marginBottom="10dp"

        />


</android.support.constraint.ConstraintLayout>